# eletromagnetism-lib

./: .buildinfo  .gitignore  Eletromag.py  Eletromag_descrito.py  README.md  Validação.ipynb  __init__.py  electromagnetism.html  electromagnetism.mathematics.html  electromagnetism.models.html  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  test.py
.github/workflows/: documentation.yaml
_sources/: electromagnetism.models.rst.txt  electromagnetism.rst.txt  index.rst.txt
docs/source/: conf.py  electromagnetism.mathematics.rst  modules.rst
electromagnetism/: __init__.py  system_calculations.py
electromagnetism/mathematics/: constants.py  geometry.py
electromagnetism/models/: __init__.py  coil.py  solenoid.py
mathematics/: constants.py  geometry.py
models/: coil.py
